# cellgeometry

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  environment.yml  index.html  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-docs.yaml  docker-publish.yml  pylint.yml  pysa.yml  python-publish.yml
assets/css/: styles.0b097f4b.css  styles.9f92d014.css  styles.b80ba76e.css  styles.dc28d4f5.css
blog/: atom.xml  index.html  rss.xml
cells/: ROI_utils.py  planks.py
cells/streamlit/: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  meta.yaml  pyproject.toml
cells/streamlit/.streamlit/: config.toml
cells/streamlit/cellgeometry/: Hello.py
cells/streamlit/cellgeometry/data/: cells.txt
cells/streamlit/cellgeometry/pages/:  Elastic_Metric_for_Cell_Boundary_Analysis.py  1-Load_Data.py  2-Cell_Shear.py  2-Mean_Shape.py  3-PACMAP.py  3-PCA.py  4-3D_Cell_Segmentation.py  Cell_Shear.py
cells/streamlit/cellgeometry/segmentation/: celldataset.py  feature.py  gconv3d.py  hist_match.py  losses.py  main.py  model.py  postprocessing.py  predict.py
cells/streamlit/cellgeometry/segmentation/experiments/: cell.yaml
cells/streamlit/cellgeometry/segmentation/utils/: criterions.py  parser.py
cells/streamlit/cellgeometry/utils/: basic.py  data_utils.py  experimental.py
cells/streamlit/cells/: Hello.py
cells/streamlit/cells/pages/:  Elastic_Metric_for_Cell_Boundary_Analysis.py  1-Load_Data.py  Cell_Shear.py
cells/streamlit/cells/utils/: data_utils.py  experimental.py
cells/streamlit/tests/: test_basic.py  test_experimental.py
docs/: docusaurus.config.js
markdown-page/: index.html
tests/: test_basic.py  test_experimental.py
(+99 files in other folders)
