[tool.poetry]
name = "cellgeometry"
version = "0.1.3"
description = "Statistical Cell Shape Analysis"
authors = ["Amil Khan <amil@ucsb.edu>", "Samuel Feinstein <sdfeinstein@ucsb.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bioshape-lab/cells"
homepage = "https://github.com/bioshape-lab/cells/tree/main/cells/streamlit"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
numpy = "1.23.0"
scikit-image = "^0.20.0"
matplotlib = "^3.7.1"
numba = "^0.56.4"
autograd = "^1.5"
read-roi = "^1.6.0"
plotly = "^5.14.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pre-commit = "pre-commit"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }